kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: dashboard-ingress
spec:
  rules:
    - host: django.postgres.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 80
